--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "node build/src/index.js",
         "build": "npm run test && tsc -p tsconfig.json",
         "buildstart": "npm run build && npm run start",
-        "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+        "test": "set NODE_OPTIONS=--experimental-vm-modules jest"
     },
     "keywords": [],
     "author": "",
@@ -22,7 +22,9 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "@types/minimist": "^1.2.5",
         "dotenv": "^16.3.1",
+        "minimist": "^1.2.8",
         "node-fetch": "^3.3.2",
         "prompt-sync": "^4.2.0",
         "ytdl-core": "^4.11.5"
